tests/language_modules/04_types/invalid_semantics/unknown_parameter_type.vf
module UnknownParameterType

procedure accept(value: MissingType)
is
    check true
end accept

end UnknownParameterType